--- a/src/Component/ShearComponent/FooterColumn/FooterColumn.css
+++ b/src/Component/ShearComponent/FooterColumn/FooterColumn.css
@@ -1,7 +1,3 @@
-.footer-title {
-  min-height: 20px;
-  margin-top: 20px;
-}
 .social-media .icon {
   height: 40px;
   width: 40px;
@@ -11,6 +7,10 @@
   padding: 10px;
 }
 .social-media .active-icon {
+  background-color: #6acece;
+  color: white;
+}
+.social-media .active-icon:hover {
   background-color: #6acece;
   color: white;
 }
