--- a/src/Component/AdminPage/AddService/AddService.css
+++ b/src/Component/AdminPage/AddService/AddService.css
@@ -21,7 +21,7 @@ label {
 }
 .inputfile,
 label {
-  cursor: pointer; /* "hand" cursor */
+  cursor: pointer;
 }
 .upload-image-area {
   background-color: #dcffec;
