--- a/src/Component/AdminPage/AdminOrderListTable/AdminBookingTable.css
+++ b/src/Component/AdminPage/AdminOrderListTable/AdminBookingTable.css
@@ -1,6 +1,9 @@
-.status-box{
-    background: none;
+.status-box {
+  background: none;
 }
-.status-box:focus,.status-box:active,.status-box, .status-box::selection{
-    border: none;
+.status-box:focus,
+.status-box:active,
+.status-box,
+.status-box::selection {
+  border: none;
 }
