--- a/src/Component/HomePage/Header/Header.css
+++ b/src/Component/HomePage/Header/Header.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../../Image//1-1.jpg");
+  background-image: url("../../../Image/photo-1544161515-4ab6ce6db874.jpg");
   background-size: cover;
   height: 600px;
   background-position: center center;
@@ -7,15 +7,18 @@
 .banner h2 {
   font-family: "Mr De Haviland", cursive;
   font-size: 70px;
+  color: #292929;
 }
 .banner h1 {
   font-size: 65px;
   font-family: "Raleway", sans-serif;
-  font-weight: 300;
+  font-weight: 600;
   margin-top: -33px;
+  color: #292929;
 }
 .banner p {
   font-size: 20px;
+  color: #292929;
 }
 .banner-info {
   padding-top: 90px;
@@ -28,7 +31,6 @@
   .banner h1 {
     font-size: 40px;
     margin: 20px 0;
-    /* margin-top: -10px; */
   }
 }
 
@@ -48,6 +50,6 @@
   }
   .banner h1 {
     font-size: 45px;
-    margin-top: -10px;
+    margin-top: -10px;    
   }
 }
